[tool.poetry]
name = "hdrezka"
version = "3.2.3"
description = "HDRezka Python API"
authors = ["nikdissv <nikdissv@proton.me>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/NIKDISSV-Forever/HDRezka"
repository = "https://github.com/NIKDISSV-Forever/HDRezka"
documentation = "https://nikdissv-forever.github.io/HDRezka/hdrezka"
keywords = ["HDRezka", "hdrezka.ag", "watch online", "api", "stream"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Video"
]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
lxml = { version = "^5.3.0", markers = "python_version < '3.14'" }
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pdoc3 = "^0.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
